# zxcv

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: release.yml
.superpowers/brainstorm/98425-1778573489/content/: approaches.html  color-palette.html  design-v1-final.html  design-v1.html  style-direction.html
.superpowers/brainstorm/98425-1778573489/state/: events  server-stopped
docs/superpowers/specs/: 2026-05-12-icon-design.md
examples/: gen-man.rs
src/: availability.rs  cache.rs  candidate.rs  cli.rs  clipboard.rs  config.rs  debug.rs  fzf.rs  history.rs  init.rs  install_man.rs  main.rs  paths.rs  safety.rs
src/providers/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
