[package]
name = "zxcv"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "CLI that turns natural language into shell one-liner commands using an LLM."
authors = ["Keisuke Kuzukawa <kuzukawa@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kuzukawa/zxcv"
homepage = "https://github.com/kuzukawa/zxcv"
keywords = ["cli", "shell", "llm", "fzf"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
clap_mangen = "0.3.0"
dirs = "6.0.0"
regex = "1.12.3"
reqwest = { version = "0.13.3", default-features = false, features = ["rustls", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
toml = "1.1.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
